--- a/resourses/css/style.css
+++ b/resourses/css/style.css
@@ -122,6 +122,19 @@ nav span {
   height: 200px;
 }
 
+#bannercontent {
+	  background-color: black;
+      position: absolute; 
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      width: 1200px;
+      height: 100px;
+      margin: auto;
+	  vertical-align: middle;
+}
+
 footer {
   text-align: left;
   padding-left: 20px;
