Fixed tiny flaws

--- a/resourses/css/style.css
+++ b/resourses/css/style.css
@@ -62,6 +62,8 @@ nav span {
   padding-top: 70px;
 }
 
+/* didn't work (code below) */
+
 #mission .content {
   margin: auto;
   background-color: black;
